<resources>
    <string name="app_name">SPMS</string>
    <string name="home">Home</string>
    <string name="log">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_maps">Map</string>
    <string name="name">Username</string>
    <string name="Password">Password</string>
    <string name="ConfirmPassword">Re-Enter Password</string>
    <string name="Email">E-mail</string>
    <string name="logout">Log out</string>
    <string name="select_place">select place</string>
    <string name="google_maps_API_key">AIzaSyDdTvik935gTCI2xveDgOJLI9zYEYfZInA</string>

</resources>
