<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="com.example.android.spms.Log_inActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:padding="10dp"
        android:background="@color/white">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            android:textColorHint="@color/hintColor"
            app:errorTextAppearance="@color/Error"
            >

            <android.support.design.widget.TextInputEditText

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/Email"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"
                android:paddingBottom="20dp"
                android:textSize="16sp"
                android:id="@+id/emailLogIn"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            android:textColorHint="@color/hintColor"
            app:passwordToggleEnabled="true"
            app:errorTextAppearance="@color/Error">

            <android.support.design.widget.TextInputEditText

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/Password"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:paddingBottom="20dp"
                android:textSize="16sp"
                android:id="@+id/passwordLogIn"
                />
        </android.support.design.widget.TextInputLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:text="@string/log"
                android:id="@+id/login"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don't have an account ? "
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingLeft="15dp"
                android:paddingBottom="15dp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sign"
                android:text="@string/sign_up"
                android:textColor="@color/colorPrimary"
                android:background="@color/background_color"/>

        </LinearLayout>

</RelativeLayout>
