<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="com.example.android.spms.Sign_upActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:background="@color/white"
        android:gravity="center"
        android:padding="10dp"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            android:textColorHint="@color/hintColor"
            app:errorTextAppearance="@color/Error">

            <android.support.design.widget.TextInputEditText

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/name"
                android:textColor="@color/black"
                android:inputType="text"
                android:paddingBottom="20dp"
                android:textSize="16sp"
                android:id="@+id/name"
                />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            android:textColorHint="@color/hintColor"
            app:errorTextAppearance="@color/Error">

            <android.support.design.widget.TextInputEditText

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/Email"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"
                android:paddingBottom="20dp"
                android:textSize="16sp"
                android:id="@+id/Email"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            android:textColorHint="@color/hintColor"
            app:passwordToggleEnabled="true"
            app:errorTextAppearance="@color/Error">

            <android.support.design.widget.TextInputEditText

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/Password"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:paddingBottom="20dp"
                android:textSize="16sp"
                android:id="@+id/Password"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            android:textColorHint="@color/hintColor"
            app:passwordToggleEnabled="true"
            app:errorTextAppearance="@color/Error">

            <android.support.design.widget.TextInputEditText

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/ConfirmPassword"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:paddingBottom="20dp"
                android:textSize="16sp"
                android:id="@+id/confirm"
                />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:onClick="Registration"
            android:id="@+id/Register"
            android:text="Register"/>



    </LinearLayout>

</RelativeLayout>
